data/derived/sp14/progs/unify/prog1359.ml.out
Characters 62-63:
  | n -> if n > 0 then 0;;
                ^
Error: This expression has type int but an expression was expected of type
         'a list
